@@ -1,0 +1,2 @@
+Site URL: https://pornkinox.to/
+DMCA: https://pornkinox.to/dmca/
