@@ -6,3 +6,5 @@ added: netfapx
 added: pornvid69
 cam4: coutry added to name
 cam4: fixed unicode error in Leia
+added: pornkinox
+added: familypornhd
